# dataflow

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.MD  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: release.yml
configs/: cronjobs.json  pipelines.json  sinks.json
configs.example/: pipelines.json  sinks.json  sources.json
configs.example/sample_data/: sales.csv
dataflow/alerts/: email_alert.py
dataflow/api/: main.py
dataflow/config/: database.py  db_models.py  loader.py  migrate.py  models.py
dataflow/connectors/: base.py  csv_connector.py  duckdb_connector.py  local_file_connector.py  mysql.py  postgres.py  rest_api.py  s3_connector.py
dataflow/executor/: pipeline_runner.py
dataflow/logger/: run_log.py
dataflow/scheduler/: runner.py
dataflow/transforms/: aggregate.py  base.py  filter.py  join.py  rename.py
docs/: README.md
docs/concepts/: data-quality.md  pipeline-timezones.md  pipelines.md  query-tool.md  scheduling.md  sinks.md  sources.md  template-variables.md  transformations.md
docs/enterprise/: deployments.md  production.md  sso.md
docs/getting-started/: first-pipeline.md  installation.md  running-a-pipeline.md  understanding-dataflow.md
docs/roadmap/: roadmap.md
docs/sinks/: csv.md  delta.md  parquet.md
docs/sources/: csv.md  database.md  https.md  parquet.md
docs/transformations/: aggregations.md  filtering.md  python-plugins.md  sql.md
docs/troubleshooting/: common-errors.md  faq.md
scripts/: bump_version.py  employee.sql  generate_large_parquet.py  test_api_query.py  test_duckdb_native.py
src/: alerts.py  api.py  auth_sso.py  config.py  executor.py  jobs.py  llm.py  logger.py  main.py  migrate.py  pipeline_templates.py  scheduler.py  settings.py  worker.py
src/migrations/: env.py
src/static/: style.css
src/templates/: audit.html  base.html  cronjobs.html  dashboard.html  login.html  (+5 more)
tests/: conftest.py  test_api_pipelines.py  test_audit.py  test_config.py  test_executor.py  test_jobs.py  test_llm.py  test_pipeline_templates.py  test_rbac.py  test_settings.py  test_sink_file_size.py  test_sso.py  test_transforms.py  test_worker_scheduler.py
ui/: components.json  index.html  package-lock.json  package.json  vite.config.ts
(+39 files in other folders)
