[project]
name = "dataflow"
version = "0.1.0"
requires-python = ">=3.13"
description = "Self-hosted data pipeline engine built on DuckDB — SQL transforms, Delta Lake writes, data quality checks, and a dark-mode dashboard."
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Vamsi Konakanchi", email = "contact@vamsi-k.com" },
]
readme = "README.md"
keywords = ["data-pipeline", "duckdb", "delta-lake", "etl", "data-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "duckdb>=0.10",
    "apscheduler>=3.10",
    "click>=8.1",
    "fastapi[standard]>=0.136.3",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1.0",
    "pyarrow",
    "deltalake>=0.18",
    "itsdangerous>=2.2.0",
    "bcrypt>=5.0.0",
    "alembic>=1.18.5",
    "authlib>=1.3.2",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/vmskonakanchi/dataflow"
Repository = "https://github.com/vmskonakanchi/dataflow"
Issues = "https://github.com/vmskonakanchi/dataflow/issues"
Changelog = "https://github.com/vmskonakanchi/dataflow/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ai = ["llama-cpp-python>=0.3.32", "huggingface-hub>=1.22.0"]
ml = ["umap-learn>=0.5.6"]
dev = ["pytest>=8.0"]

[tool.uv]
no-binary-package = ["llama-cpp-python"]
